reduce animated cursors memory usage